style: fix dark mode colours for avatar

--- a/components/userAvatar.module.scss
+++ b/components/userAvatar.module.scss
@@ -1,3 +1,3 @@
 .Avatar {
-  background-color: var(--gray-4);
+  background-color: var(--gray-contrast);
 }
